--- a/src/app/mysuscription/mysuscription.component.html
+++ b/src/app/mysuscription/mysuscription.component.html
@@ -6,20 +6,12 @@
     @for (subscription of subscriptionsData.subscriptions; track subscription) {
     <div class="border rounded-lg p-4 w-64 shadow-md bg-white">
       <p class="text-sm font-medium">
-        <strong>Category ID:</strong> {{ subscription.category_id }}
+        <strong>Nombre de Categoría:</strong> {{ subscription.category.name }}
       </p>
       <p class="text-sm">
-        <strong>URL:</strong>
-        <a
-          [href]="subscription.url"
-          target="_blank"
-          class="text-blue-500 hover:underline"
-          >{{ subscription.url }}</a
-        >
+        <strong>Descripción:</strong> {{ subscription.category.description }}
       </p>
-      <p class="text-sm">
-        <strong>Command:</strong> {{ subscription.request_body.command }}
-      </p>
+
       <button
         (click)="goToCategory(subscription.category_id)"
         class="mt-2 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
