--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -2,21 +2,42 @@
   <h2 class="text-xl font-semibold mb-4">Productos Recibidos</h2>
 
   <!-- Mostrar productos si hay en el array -->
-  @if(products.length > 0){
+  @if(notifications.length > 0){
   <div>
     <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
-      @for (product of products; track product) {
+      @for (notification of notifications; track notification) {
       <div class="border rounded-lg p-4 shadow-md bg-white">
         <img
-          [src]="product.img_url"
-          alt="{{ product.name }}"
+          [src]="notification.product.img_url"
+          alt="{{ notification.product.name }}"
           class="w-full h-32 object-cover mb-2"
         />
-        <p class="text-lg font-semibold">{{ product.name }}</p>
-        <p class="text-sm text-gray-700">{{ product.description }}</p>
-        <p class="text-sm text-gray-500">Precio: {{ product.price }}</p>
+        <p class="text-lg font-semibold">{{ notification.product.name }}</p>
+        <p class="text-sm text-gray-700">
+          {{ notification.product.description }}
+        </p>
+        <p class="text-sm text-gray-500">
+          Precio Actual: {{ notification.product.price }}
+        </p>
+        <p class="text-sm text-gray-500">
+          Precio Mínimo: {{ notification.lowerPrice }}
+        </p>
+        <p class="text-sm text-gray-500">
+          Precio Máximo: {{ notification.higherPrice }}
+        </p>
+        <p
+          class="text-sm font-semibold"
+          [ngClass]="{
+            'text-red-500': notification.type === 'Atencion',
+            'text-green-500': notification.type === 'Oferta'
+          }"
+        >
+          {{
+            notification.type === "Atencion" ? "Aumento de Precio" : "Oferta"
+          }}
+        </p>
         <a
-          [href]="product.url"
+          [href]="notification.product.url"
           target="_blank"
           class="text-blue-500 hover:underline"
           >Ver producto</a
