--- a/src/app/mysuscription/mysuscription.component.html
+++ b/src/app/mysuscription/mysuscription.component.html
@@ -6,14 +6,14 @@
     @for (subscription of subscriptionsData.subscriptions; track subscription) {
     <div class="border rounded-lg p-4 w-64 shadow-md bg-white">
       <p class="text-sm font-medium">
-        <strong>Nombre de Categoría:</strong> {{ subscription.category.name }}
+        <strong>Nombre de Categoría:</strong> {{ subscription.name }}
       </p>
       <p class="text-sm">
-        <strong>Descripción:</strong> {{ subscription.category.description }}
+        <strong>Descripción:</strong> {{ subscription.description }}
       </p>
 
       <button
-        (click)="goToCategory(subscription.category_id)"
+        (click)="goToCategory(subscription.id)"
         class="mt-2 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
       >
         Ver Categoría
